--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,6 +1,6 @@
 dist_bin_SCRIPTS = blofeld
 CLEANFILES = $(bin_SCRIPTS)
-EXTRA_DIST = automake.in
+EXTRA_DIST = blofeld.in
 
 do_subst = sed -e 's,[@]PYTHON[@],$(PYTHON),g' \
 		   -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
