--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,6 +1,9 @@
 bin_SCRIPTS = blofeld
+
 CLEANFILES = $(bin_SCRIPTS)
-EXTRA_DIST = blofeld.in
+EXTRA_DIST = \
+	blofeld.in \
+	buildwin32.py
 
 do_subst = sed -e 's,[@]PYTHON[@],$(PYTHON),g' \
 		   -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
