Forgot to add version.py.in

--- a/blofeld/version.py.in
+++ b/blofeld/version.py.in
@@ -15,5 +15,5 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301, USA.
 
-__version__ = "0.2.4"
-__revision__ = "274"
+__version__ = "@PACKAGE_VERSION@"
+__revision__ = "@GIT_REVISION@"
